refactoring all the things