@@ -1,19 +1,16 @@
 package com.springboot.couchbase.springbootrealworld.domain.tag.service;
 
-import com.springboot.couchbase.springbootrealworld.domain.article.dto.ArticleDto;
-import com.springboot.couchbase.springbootrealworld.domain.article.entity.ArticleDocument;
 import com.springboot.couchbase.springbootrealworld.domain.article.repository.ArticleRepository;
 import com.springboot.couchbase.springbootrealworld.domain.tag.entity.ArticleTagRelationDocument;
 import com.springboot.couchbase.springbootrealworld.domain.tag.repository.TagRepository;
-import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.stream.Collectors;
+import java.util.stream.StreamSupport;
 
 @Service
-@RequiredArgsConstructor
 public class TagServiceImpl implements TagService {
     @Autowired
     private TagRepository tagRepository;
@@ -24,7 +21,10 @@ public class TagServiceImpl implements TagService {
 
     @Override
     public List<String> getAllTagList() {
-        return tagRepository.findAllTagList().stream().map(ArticleTagRelationDocument::getTag).distinct().collect(Collectors.toList());
+        Iterable<ArticleTagRelationDocument> results = tagRepository.findAll();
+        return StreamSupport.stream(results.spliterator(), false).map(e -> e.getTag()).collect(Collectors.toList());
+//        return results.parallelStream().map(s -> s.getTag()).toList();
+//        return tagRepository.findAllTagList();
     }
 
 
